[project]
name = "robosuite-light"
version = "0.0.1"
description = "A lightweight version of Robosuite library"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ArenaX Labs", email = "research@competesai.com" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/ArenaX-Labs/robosuite-light"
Documentation = "https://robosuite.ai/docs/overview.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
extend-exclude = "robosuite/((models/assets)|(controllers/config))"

[tool.isort]
profile = "black"
line_length = 120
skip = ["__init__.py"]
filter_files = true
py_version = "all"
extend_skip = [
    "robosuite/models/assets",
    "robosuite/controllers/config",
]
